[package]
name = "net-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
log.workspace = true
log4rs.workspace = true
serde_yaml = "0.9.21"
serde = { version = "1.0.193", features = ["derive"] }
validator = { version = "0.16.1", features = ["derive"] }
async-trait = "0.1.74"
serde_json = "1.0.108"
futures = "0.3.30"
json = "0.12.4"
tokio = { version = "1.28.1", features = ["full"] }
async-tungstenite = { version = "0.24.0", features = ["tokio-runtime"] }
net-core-api = "0.2.0"
net-reporter-api = "0.4.5"
net-transport = { version = "=0.1.0", features = ["quinn"]}
net-token-verifier = "0.1.0"
net-config = "0.1.1"
toml = "0.8.10"
net-file = "0.1.0"
config = "0.14.0"
actix-multipart = "0.6.1"
net-agent-api = "0.1.3"
directories = "5.0.1"
openssl = { version = "0.10.64", features = ["vendored"] }
