[package]
name = "quic-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quic-core = { path = "../quic-core" }
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "io-util"] }
rustls = { version = "0.21.0", default-features = false, features = ["quic", "dangerous_configuration"] }
quinn = "0.10.2"
rustls-pki-types = "1.0.1"
async-trait = "0.1.74"
[dev-dependencies]
rcgen = { version =  "0.12.0", features = ["x509-parser"] }
