[package]
name = "quic-core"
version = "0.1.0"
edition = "2021"

[dependencies]
log.workspace = true
log4rs.workspace = true
quinn = "0.10.2"
rcgen = "0.11.3"
tokio = { version = "1.28.1", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
rustls = { version = "0.21.0", default-features = false, features = ["quic", "dangerous_configuration"] }
x509-parser = "0.15.1"
rustls-pemfile = "2.0.0"
rustls-pki-types = "1.0.1"
